# resonant_search

./: README.md  demo.py  engine.py  fill_data_files.py  g-petey.txt
data/: Millenium_problems.docx  Millennium_toolkit.docx  Quantum_math.docx  balance_and_void.txt  binding_and_field.txt  chaos_and_force.txt  chaos_and_link.txt  collapse_and_decay.txt  cycle_and_chaos.txt  decay_and_chaos.txt  emergence_and_cycle.txt  entropy .txt  entropy_and_void.txt  force_and_decay.txt  force_and_motion.txt  force_and_origin.txt  form_and_pattern.txt  form_and_resonance.txt  fractal_and_balance.txt  fractal_and_pattern.txt  order_and_essence.txt  order_and_motion.txt  pattern_and_structure.txt  seed_urls.txt  solving_via_godel.html  structure_and_motion.txt  void_and_state.txt  (+2 more)
rust/: Cargo.toml
rust/data/: RYO_(N)AND_Patch_Ideas.txt  balance_and_order.txt  binding_and_collapse.txt  binding_and_form.txt  chaos_and_collapse.txt  collapse_and_decay.txt  collapse_and_essence.txt  cycle_and_flow.txt  decay_and_chaos.txt  decay_and_order.txt  emergence_and_motion.txt  emergence_and_structure.txt  entropy_and_collapse.txt  entropy_and_form.txt  entropy_and_motion.txt  entropy_test.txt  force_and_collapse.txt  form_and_flow.txt  form_and_motion.txt  fractal_and_collapse.txt  fractal_and_form.txt  fractal_and_origin.txt  in the dark we live.txt  index_export.csv  pattern_and_motion.txt  resonance_and_chaos.txt  resonance_and_link.txt  shiva.txt  structure_and_flow.txt  structure_and_void.txt  symbols_of_order.txt  symmetry_and_chaos.txt  symmetry_and_cycle.txt  symmetry_and_pattern.txt  tension_and_order.txt  tension_and_pattern.txt  tension_and_void.txt  the_girlfblend_entity.txt
rust/data/checkpoints/: latest.checkpoint
rust/src/: Cargo.toml  claude-guide.md  crawler.rs  engine.rs  entropy.rs  index_export.csv  lib.rs  main.rs  tokenizer.rs
rust/src_old/: lib.rs  main.rs  prime_hilbert.rs
(+24 files in other folders)
