[package]
name = "resonant_search"
version = "0.3.0"
edition = "2021"

[dependencies]
regex = "1.9.6"
primal = "0.3.1"
scraper = "0.17.1"
reqwest = { version = "0.12", features = ["json"] } # Added json feature for potential future use
tokio = { version = "1", features = ["full"] } # Required for async operations
url = "2.5.0" # To handle URL parsing and joining
futures = "0.3.30" # For stream operations
nalgebra = "0.32.3" # For matrix operations and quantum-inspired computations
num-complex = "0.4.4" # For complex number support
rand = "0.8.5" # For random number generation