[package]
name = "resonant_search"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
url = "2.0"

# Prime number generation
primal = "0.3"

# Regular expressions
regex = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Compression
flate2 = "1.0"

# CSV handling
csv = "1.1"

# Random number generation
rand = "0.8"

# Futures and async
futures = "0.3"

# Math and complex numbers
num-complex = "0.4"
nalgebra = { version = "0.32", features = ["serde-serialize"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"