[package]
name = "resonant_search"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
num-primes = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
scraper = "0.13"
url = "2"
futures = "0.3"
rand = "0.8"
flate2 = "1.0"
csv = "1.1"
num-complex = "0.4"
bincode = "1.3.3" # ADDED
serde = { version = "1.0", features = ["derive"] } # ADDED for bincode